
2018/
    * fixed #35061: use guid for uniqueness, when available.
      (thanks to avbidder)
    * improved #58422: XML::FeedPP cannot be subclassed.
      (thanks to bitcard)
    * remove useless XML::FeedPP::Common layer
    * fixed #71318: save use of timegm
      (thanks to Brian Gomes Bascoy)
    * fixed #72523: merge of items in channel changes guid
      (thanks to Никулин Юрий)

2011/05/09 (0.45_01) ** DEVELOPER RELEASE
    * supports subclassing. t/47_subclass_content.t added.
      https://rt.cpan.org/Public/Bug/Display.html?id=58422
      (thanks to bitcard)

2011/05/08 (0.43)
    * fixed #67268: Wrong return value of description() with xhtml content in atom feeds
      https://rt.cpan.org/Ticket/Display.html?id=67268
      (thanks to MDOM)

2010/10/31 (0.42)
    * fixed #55197: Not a HASH reference at XML/FeedPP.pm line 2260
      https://rt.cpan.org/Ticket/Display.html?id=55197
      (thanks to MDOM)

2009/11/21 (0.41)
    * supports generating CDATA section by setting SCALAR ref value like XML::TreePP.
      (thanks to Mario Domgoergen)
    * pod added to create an empty Atom 1.0 instance intended:
      XML::FeedPP::Atom::Atom10->new() 
      (thanks to Andy Piper)

2009/04/07 (0.40)
    * fixed #44082: parse method refuses feeds with UTF-8 BOM
      http://rt.cpan.org/Public/Bug/Display.html?id=44082
      (thanks to haarg)
    * supports to get attributes in multiple elements determinably.
      See 36_get_multiple.t
    * new() and load() methods accept -type argument to specify source type.
      http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=504143
      (thanks to Anthony DeRobertis)
    * to_string() and to_file() methods accept options for XML::TreePP.

2009/03/12 (0.38)
    * fixed #36270: supports no XMLDecl on load() method
      https://rt.cpan.org/Ticket/Display.html?id=36270
      (thanks to hirsch)
    * supports category element which has type="" or domain="" attribute